# bitox

./: .gitmodules  CMakeLists.txt
include/bitox/: api.hpp  bitox.hpp
include/bitox/ecs/: ECS.hpp  component.hpp  ecs_manager.hpp  entity.hpp  id_type.hpp  system.hpp
include/bitox/engine/: __state_instance.hpp  application.hpp  input.hpp  input_system.hpp  state.hpp  window.hpp
include/bitox/game/: game_object.hpp  scene.hpp  scene_node.hpp  transform.hpp
include/bitox/graphics/: ogl_render_system.hpp  ogl_renderer.hpp  shader.hpp
libs/stb_image/: CMakeLists.txt
src/: application.cpp  ecs_manager.cpp  entry_point.cpp  state.cpp  system.cpp  window.cpp
src/ecs/: component.cpp  ecs_manager.cpp
src/engine/: application.cpp  input_system.cpp  state.cpp
src/game/: game_object.cpp
src/graphics/: ogl_render_system.cpp  shader.cpp
